Fix nav bar spacing

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --section-background-color: #dadada;
     --section-accent-color: #b7b7b7;
     --link-color: #f91272;
+    --navlink-width: 19%;
 
     /* rgb(255, 255, 204)rgb(102, 51, 0)rgb(255, 255, 51) */
 }
